--- a/index.html
+++ b/index.html
@@ -1,161 +1,138 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>الزعزعي تكنولوجي | بيع وصيانة عدادات النقود وطابعات الباركود في اليمن</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>الزعزعي تكنولوجي | آلات عد النقود وقطع الغيار والطابعات</title>
 
-<!-- 🟩 إعدادات SEO -->
-<meta name="title" content="الزعزعي تكنولوجي | بيع وصيانة عدادات النقود وطابعات الباركود في اليمن">
-<meta name="description" content="الزعزعي تكنولوجي – خبراء في بيع وصيانة عدادات النقود وطابعات الباركود وقطع الغيار الأصلية في اليمن. وكلاء ومهندسون متخصصون في أجهزة جلوري، ايتاس، رينتك، الشدادي، والهندي.">
-<meta name="keywords" content="عدادات النقود, آلة عد النقود, عداد فلوس, صيانة عدادات النقود, قطع غيار عدادات النقود, مهندس عدادات النقود, عداد عملات, فحص العملات المزيفة, أجهزة كشف العملات المزيفة, طابعات باركود, صيانة طابعات الباركود, قطع غيار طابعات الباركود, بيع عدادات النقود في اليمن, الزعزعي تكنولوجي, وكيل آلات عد النقود, عداد فلوس صنعاء, صيانة عدادات النقود عدن, أجهزة فحص العملات اليمن, عداد النقود الصيني, عداد النقود جلوري, عداد النقود ايتاس, عداد النقود رينتك">
-<meta name="robots" content="index, follow">
-<meta name="language" content="ar">
-<meta name="author" content="الزعزعي تكنولوجي">
-<meta name="geo.region" content="YE">
-<meta name="geo.placename" content="صنعاء">
-<meta name="geo.position" content="15.3694;44.1910">
-<meta name="ICBM" content="15.3694, 44.1910">
+  <!-- ✅ وسوم SEO -->
+  <meta name="description" content="الزعزعي تكنولوجي - المتجر الأول في اليمن لبيع وصيانة آلات عد النقود، فحص العملات، طابعات الباركود، وأنظمة إلكترونية متقدمة. جودة + ثقة + خدمات سريعة.">
+  <meta name="keywords" content="الزعزعي تكنولوجي, الات عد النقود, عدادات النقود, مهندس عدادات, فحص العملات, عدادة فلوس, طابعة باركود, قطع غيار الات عد النقود, رينتك, جلوري, ايتاس, صيانة الات عد النقود, صنعاء, عدن, آلات مصرفية, حلول مصرفية, آلات فحص عملات, الزعزعي">
+  <meta name="author" content="الزعزعي تكنولوجي">
+  <meta name="robots" content="index, follow">
 
-<!-- 🟦 بيانات منظمة لتحسين الظهور في خرائط جوجل -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "LocalBusiness",
-  "name": "الزعزعي تكنولوجي",
-  "image": "https://i.ibb.co/tsnspmD/z-logo.png",
-  "@id": "https://alzazai-tech.com",
-  "url": "https://alzazai-tech.com",
-  "telephone": "+967772607581",
-  "email": "smart4mn@gmail.com",
-  "priceRange": "$$",
-  "description": "الزعزعي تكنولوجي – متخصصون في بيع وصيانة عدادات النقود وطابعات الباركود وقطع الغيار الأصلية في اليمن. وكلاء ومهندسون معتمدون لأجهزة جلوري، ايتاس، رينتك، والشدادي.",
-  "address": {
-    "@type": "PostalAddress",
-    "streetAddress": "شارع صخر – مقابل جامع الحمّدي",
-    "addressLocality": "صنعاء",
-    "addressCountry": "YE"
-  },
-  "geo": {
-    "@type": "GeoCoordinates",
-    "latitude": 15.3694,
-    "longitude": 44.1910
-  },
-  "openingHoursSpecification": [
-    {
-      "@type": "OpeningHoursSpecification",
-      "dayOfWeek": [
-        "Saturday",
-        "Sunday",
-        "Monday",
-        "Tuesday",
-        "Wednesday",
-        "Thursday"
-      ],
-      "opens": "08:00",
-      "closes": "19:00"
+  <!-- ✅ تحسين المشاركة في فيسبوك وواتساب -->
+  <meta property="og:title" content="الزعزعي تكنولوجي | آلات عد النقود والطابعات وأنظمة مصرفية">
+  <meta property="og:description" content="بيع وصيانة آلات عد النقود، فحص العملات، وطابعات الباركود. الزعزعي تكنولوجي - خبرة وثقة في الحلول التقنية.">
+  <meta property="og:image" content="logo.png">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://alzazai-tech.com">
+
+  <!-- ✅ تحسين المشاركة في تويتر -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="الزعزعي تكنولوجي | حلول تقنية ومصرفية">
+  <meta name="twitter:description" content="بيع وصيانة آلات عد النقود وطابعات الباركود وأنظمة إلكترونية حديثة.">
+  <meta name="twitter:image" content="https://i.ibb.co/tsnspmD/z-logo.png">
+
+  <!-- 🔤 الخطوط -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a2e0e6ad5f.js" crossorigin="anonymous"></script>
+
+  <style>
+    * {margin:0; padding:0; box-sizing:border-box; font-family:'Cairo',sans-serif;}
+    body {background:#f5f6fa; color:#222; overflow-x:hidden;}
+
+    /* 🔷 الهيدر */
+    header {
+      background: linear-gradient(90deg, #0b1a33, #5fa0eb);
+      color:white;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:15px 40px;
+      flex-wrap:wrap;
     }
-  ],
-  "sameAs": [
-    "https://www.facebook.com/alzazai.technology",
-    "https://wa.me/967772607581"
-  ]
-}
-</script>
+    header img {height:75px;}
+    nav a {
+      color:white; text-decoration:none; margin:0 15px; font-weight:600;
+      transition:color 0.3s;
+    }
+    nav a:hover {color:#f58220;}
 
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-<script src="https://kit.fontawesome.com/a2e0e6ad5f.js" crossorigin="anonymous"></script>
+    /* 🟧 البانر */
+    .hero {
+      background:linear-gradient(rgba(11,26,51,0.8), rgba(11,26,51,0.8)), url('applo.png') center/cover;
+      color:white;
+      text-align:center;
+      padding:120px 20px;
+    }
+    .hero h1 {font-size:48px; color:#f58220; margin-bottom:10px;}
+    .hero p {font-size:22px; max-width:700px; margin:auto;}
 
-<style>
-  * {margin:0; padding:0; box-sizing:border-box; font-family:'Cairo',sans-serif;}
-  body {background:#f5f6fa; color:#222; overflow-x:hidden;}
+    /* 🟩 الأقسام */
+    .categories {
+      text-align:center;
+      margin:50px auto 20px;
+    }
+    .categories button {
+      background:#0b1a33; color:white; border:none; padding:10px 25px;
+      border-radius:25px; margin:5px; font-weight:600; cursor:pointer;
+      transition:background 0.3s;
+    }
+    .categories button.active, .categories button:hover {
+      background:#f58220;
+    }
 
-  header {background:rgb(59, 111, 170); color:white; display:flex; justify-content:space-between; align-items:center; padding:15px 50px; flex-wrap:wrap;}
-  header img {height:70px;}
-  nav a {color:white; text-decoration:none; margin:0 15px; font-weight:600; transition:color 0.3s;}
-  nav a:hover {color:#f58220;}
+    /* 🛒 المنتجات */
+    .product-grid {
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(280px,1fr));
+      gap:25px;
+      max-width:1300px;
+      margin:auto;
+      padding:30px;
+    }
+    .product-card {
+      background:white;
+      border-radius:15px;
+      box-shadow:0 6px 15px rgba(0,0,0,0.1);
+      text-align:center;
+      overflow:hidden;
+      transition:transform 0.3s, box-shadow 0.3s;
+    }
+    .product-card:hover {
+      transform:translateY(-8px);
+      box-shadow:0 8px 20px rgba(0,0,0,0.2);
+    }
+    .product-card img {
+      width:100%; height:220px; object-fit:cover;
+    }
+    .product-card h3 {margin:10px 0; color:#0b1a33;}
+    .product-card p {font-size:14px; color:#555; padding:0 15px 10px;}
+    .product-card a {
+      background:#25D366; color:white; padding:8px 18px;
+      border-radius:30px; text-decoration:none; font-weight:600;
+      display:inline-flex; align-items:center; gap:6px;
+      margin-bottom:15px;
+    }
+    .product-card a:hover {background:#1ebe5d;}
 
-  .hero {background:linear-gradient(rgba(11,26,51,0.85), rgba(11,26,51,0.85)), url('applo.png') center/cover; color:white; text-align:center; padding:120px 20px;}
-  .hero h1 {font-size:42px; color:#f58220; margin-bottom:10px;}
-  .hero p {font-size:20px;}
+    /* 📞 الفوتر */
+    footer {
+      background:#0b1a33; color:white; text-align:center;
+      padding:30px 10px; font-size:15px; line-height:1.8;
+    }
+    footer a {color:#f58220; text-decoration:none; font-weight:600;}
+    footer a:hover {text-decoration:underline;}
 
-  .products {max-width:1300px; margin:80px auto; padding:0 20px; text-align:center; position:relative;}
-  .products h2 {color:#0b1a33; font-size:32px; margin-bottom:40px;}
-
-  .slider {overflow:hidden; position:relative; width:100%;}
-  .slider-track {display:flex; gap:20px; animation: scroll 20s linear infinite;}
-  @keyframes scroll {
-    0% {transform: translateX(0);}
-    100% {transform: translateX(-50%);}
-  }
-
-.slider {
-  overflow: hidden;
-  position: relative;
-  width: 100%;
-  height: 400px; /* ارتفاع ثابت للسلايدر */
-}
-
-.slider-track {
-  display: flex;
-  gap: 20px;
-  animation: scroll 20s linear infinite;
-  height: 100%; /* ليملأ السلايدر بالكامل */
-}
-
-.product-card {
-  background: white;
-  min-width: 300px;  /* عرض ثابت للكرت */
-  height: 100%;      /* يملأ ارتفاع السلايدر */
-  border-radius: 15px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  flex-shrink: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow: hidden;
-  transition: transform 0.3s;
-}
-
-.product-card img {
-  width: auto;        /* عرض تلقائي للحفاظ على النسبة */
-  max-width: 100%;    /* لا يتجاوز عرض الكرت */
-  max-height: 250px;  /* ارتفاع ثابت للصورة داخل الكرت */
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  display: block;
-  margin-top: 15px;
-}
-
-.product-card h3, .product-card p, .product-card a {
-  text-align: center;
-  padding: 5px 10px;
-}
-  .product-card p {font-size:14px; color:#555; padding:0 10px 15px;}
-  .product-card a {display:inline-block; margin-bottom:15px; background:#25D366; color:white; padding:8px 15px; border-radius:25px; text-decoration:none; font-weight:600; transition:background 0.3s;}
-  .product-card a:hover {background:#1ebe5d;}
-  .product-card a i {margin-left:6px;}
-
-  footer {background:#0b1a33; color:white; text-align:center; padding:25px 10px; font-size:15px; line-height:1.8;}
-  footer a {color:#f58220; text-decoration:none; font-weight:600;}
-  footer a:hover {text-decoration:underline;}
-
-  .whatsapp-float {position:fixed; bottom:25px; left:25px; background:#25D366; color:white; width:60px; height:60px; border-radius:50%; display:flex; justify-content:center; align-items:center; font-size:30px; box-shadow:0 4px 10px rgba(0,0,0,0.3); text-decoration:none; z-index:1000; transition:transform 0.3s;}
-  .whatsapp-float:hover {transform:scale(1.1);}
-
-  @media(max-width:768px){
-    header {padding:10px 20px;}
-    .hero h1 {font-size:32px;}
-    .product-card {min-width:280px;}
-  }
-</style>
+    /* 🟢 زر واتساب عائم */
+    .whatsapp-float {
+      position:fixed; bottom:25px; left:25px;
+      background:#25D366; color:white; width:60px; height:60px;
+      border-radius:50%; display:flex; justify-content:center; align-items:center;
+      font-size:30px; box-shadow:0 4px 10px rgba(0,0,0,0.3);
+      text-decoration:none; z-index:1000; transition:transform 0.3s;
+    }
+    .whatsapp-float:hover {transform:scale(1.1);}
+  </style>
 </head>
 
 <body>
+
 <header>
   <img src="applo.png" alt="شعار الزعزعي تكنولوجي">
   <nav>
-    <a href="#home">the moon</a>
+    <a href="#home">الرئيسية</a>
     <a href="#products">المنتجات</a>
     <a href="#contact">تواصل معنا</a>
   </nav>
@@ -163,56 +140,36 @@
 
 <section class="hero" id="home">
   <h1>الزعزعي تكنولوجي</h1>
-  <p>للحلول التقنية والمصرفية - خبرة وثقة في تقديم أحدث الأنظمة والخدمات التقنية</p>
+  <p>بيع وصيانة عدادات النقود، طابعات الباركود، وأنظمة إلكترونية متقدمة لجميع المؤسسات والمتاجر.</p>
 </section>
 
-<section class="products" id="products">
-  <h2>منتجاتنا</h2>
-  <div class="slider">
-    <div class="slider-track" id="sliderTrack">
-      <div class="product-card">
-        <img src="1.jpg" alt="آلة عد النقود Glory">
-        <h3>آلة عد النقود Glory</h3>
-        <p>جودة عالية وسرعة فائقة في العد والفحص.</p>
-        <a href="https://wa.me/967772607581" target="_blank">تواصل <i class="fab fa-whatsapp"></i></a>
-      </div>
+<div class="categories" id="filterButtons">
+  <button class="active" onclick="filterProducts('all')">الكل</button>
+  <button onclick="filterProducts('money')">عدادات النقود</button>
+  <button onclick="filterProducts('barcode')">طابعات الباركود</button>
+  <button onclick="filterProducts('scanner')">ماسحات الباركود</button>
+  <button onclick="filterProducts('electronics')">إلكترونيات عامة</button>
+</div>
 
-      <div class="product-card">
-        <img src="2.jpg" alt="عدادة فحص عملات">
-        <h3>عدادة فحص عملات</h3>
-        <p>تكنولوجيا حديثة لكشف التزوير بدقة عالية.</p>
-        <a href="https://wa.me/967777769379" target="_blank">تواصل <i class="fab fa-whatsapp"></i></a>
-      </div>
-
-      <div class="product-card">
-        <img src="3.jpg" alt="ماكينة صرافة إلكترونية">
-        <h3>ماكينة صرافة إلكترونية</h3>
-        <p>حلول مصرفية ذكية تلائم جميع المؤسسات.</p>
-        <a href="https://wa.me/967772607581" target="_blank">تواصل <i class="fab fa-whatsapp"></i></a>
-      </div>
-
-      <!-- تكرار المنتجات لتغطية الانزلاق المستمر -->
-      <div class="product-card">
-        <img src="https://i.ibb.co/vQkT4gH/product1.jpg" alt="آلة عد النقود Glory">
-        <h3>آلة عد النقود Glory</h3>
-        <p>جودة عالية وسرعة فائقة في العد والفحص.</p>
-        <a href="https://wa.me/967772607581" target="_blank">تواصل <i class="fab fa-whatsapp"></i></a>
-      </div>
-
-      <div class="product-card">
-        <img src="https://i.ibb.co/wdmnnFt/product2.jpg" alt="عدادة فحص عملات">
-        <h3>عدادة فحص عملات</h3>
-        <p>تكنولوجيا حديثة لكشف التزوير بدقة عالية.</p>
-        <a href="https://wa.me/967777769379" target="_blank">تواصل <i class="fab fa-whatsapp"></i></a>
-      </div>
-
-      <div class="product-card">
-        <img src="https://i.ibb.co/N1mZw0G/product3.jpg" alt="ماكينة صرافة إلكترونية">
-        <h3>ماكينة صرافة إلكترونية</h3>
-        <p>حلول مصرفية ذكية تلائم جميع المؤسسات.</p>
-        <a href="https://wa.me/967772607581" target="_blank">تواصل <i class="fab fa-whatsapp"></i></a>
-      </div>
-    </div>
+<section id="products" class="product-grid">
+  <!-- المنتجات -->
+  <div class="product-card" data-category="money">
+    <img src="1.jpg" alt="آلة عد النقود Glory">
+    <h3>آلة عد النقود Glory</h3>
+    <p>عد سريع ودقيق مع فحص تزوير تلقائي.</p>
+    <a href="https://wa.me/967772607581" target="_blank"><i class="fab fa-whatsapp"></i> تواصل</a>
+  </div>
+  <div class="product-card" data-category="barcode">
+    <img src="3.jpg" alt="طابعة باركود احترافية">
+    <h3>طابعة باركود احترافية</h3>
+    <p>تعمل بجودة عالية لجميع المحلات التجارية.</p>
+    <a href="https://wa.me/967772607581" target="_blank"><i class="fab fa-whatsapp"></i> تواصل</a>
+  </div>
+  <div class="product-card" data-category="electronics">
+    <img src="6.jpg" alt="UPS مزود طاقة">
+    <h3>UPS مزود طاقة احتياطي</h3>
+    <p>يوفر حماية كاملة من انقطاع الكهرباء.</p>
+    <a href="https://wa.me/967772607581" target="_blank"><i class="fab fa-whatsapp"></i> تواصل</a>
   </div>
 </section>
 
@@ -231,6 +188,18 @@
 <a href="https://wa.me/967772607581" class="whatsapp-float" target="_blank">
   <i class="fab fa-whatsapp"></i>
 </a>
+
+<script>
+function filterProducts(category) {
+  const cards = document.querySelectorAll('.product-card');
+  const buttons = document.querySelectorAll('.categories button');
+  buttons.forEach(btn => btn.classList.remove('active'));
+  event.target.classList.add('active');
+  cards.forEach(card => {
+    card.style.display = (category === 'all' || card.dataset.category === category) ? 'block' : 'none';
+  });
+}
+</script>
 
 </body>
 </html>
